--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,12 @@ ruma-signatures = "0.4.0"
 serde = "1.0.2"
 serde_derive = "1.0.2"
 serde_json = "1.0.1"
+serde_urlencoded = "0.5.1"
+url = "1.5.1"
 
 [dependencies.ruma-api]
-git = "https://github.com/ruma/ruma-api"
-rev = "211cf5e3531cd1862136129d5f73caaac7b4eb43"
+git = "https://github.com/jplatte/ruma-api"
 
 [dependencies.ruma-api-macros]
-git = "https://github.com/ruma/ruma-api-macros"
-rev = "f5a935384e36134daf86a13190318a5c50cf2c17"
+git = "https://github.com/jplatte/ruma-api-macros"
+branch = "spike"
